--- a/config/storage-pv-skaha-cavern.yaml
+++ b/config/storage-pv-skaha-cavern.yaml
@@ -12,7 +12,7 @@ spec:
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Delete
-  storageClassName: hostpath
+  storageClassName: local-path
   local:
     path: /home/ubuntu/skaha-cavern-pvc-data
   nodeAffinity:
