--- a/config/storage-pv-skaha-cavern.yaml
+++ b/config/storage-pv-skaha-cavern.yaml
@@ -14,7 +14,7 @@ spec:
   persistentVolumeReclaimPolicy: Delete
   storageClassName: local-path
   local:
-    path: /home/ubuntu/skaha-cavern-pvc-data
+    path: /tmp/
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -33,7 +33,7 @@ metadata:
 spec:
   storageClassName: local-path
   accessModes:
-    - ReadWriteMany
+          - ReadWriteMany
   resources:
     requests:
       storage: 10Gi
